--- a/templates/swagger/v1_json.tmpl
+++ b/templates/swagger/v1_json.tmpl
@@ -566,6 +566,35 @@
         }
       }
     },
+    "/notifications/subscription": {
+      "post": {
+        "consumes": [
+          "application/json"
+        ],
+        "tags": [
+          "notification"
+        ],
+        "summary": "Create a Web Push subscription for the current user to receieve push notifications. This will also produce a test notification to ensure the given details are valid.",
+        "operationId": "notifyNewWebPushSubscription",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/WebPushSubscription"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "The Web Push subscription was tested and saved successfully."
+          },
+          "422": {
+            "description": "Required fields were missing or the provided subscription could not be tested successfully."
+          }
+        }
+      }
+    },
     "/notifications/threads/{id}": {
       "get": {
         "consumes": [
@@ -14807,6 +14836,25 @@
         }
       },
       "x-go-package": "code.gitea.io/gitea/modules/structs"
+    },
+    "WebPushSubscription": {
+      "type": "object",
+      "title": "WebPushSubscription represents a HTML5 Web Push Subscription used for background notifications.",
+      "properties": {
+        "auth": {
+          "type": "string",
+          "x-go-name": "Auth"
+        },
+        "endpoint": {
+          "type": "string",
+          "x-go-name": "Endpoint"
+        },
+        "p256dh": {
+          "type": "string",
+          "x-go-name": "P256DH"
+        }
+      },
+      "x-go-package": "code.gitea.io/gitea/modules/structs"
     }
   },
   "responses": {
@@ -15494,7 +15542,7 @@
     "parameterBodies": {
       "description": "parameterBodies",
       "schema": {
-        "$ref": "#/definitions/SubmitPullReviewOptions"
+        "$ref": "#/definitions/WebPushSubscription"
       }
     },
     "redirect": {
